Formatted a bit to make it legible on page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,18 @@
+<h1>Welcome to Crowdfunder!</h1>
+
+<h3>Current Projects</h3>
+
 <% @projects.each do |project| %>
-	<%= project.title %>
-	<%= project.description %>
-	<%= project.funding_goal %>
-	<%= project.start_date + " - " + project.end_date %>
+	<p>
+		Title: <%= project.title %>
+		<br>
+		Description: <%= project.description %>
+		<br>
+		Funding goal: <%= project.funding_goal %>
+		<br>
+		Duration: <%= project.start_date %>  -  <%= project.end_date %>
+		<br>
+	</p>
+
 
 <% end %>
