--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,9 @@
-<h1><%= @project.title %></h1>
+<h1><%= @project.title %>'s Page</h1>
 <br>
 <%= @project.description %>
 <br>
 <%= @project.funding_goal%>
 <br><%= @project.start_date %>, <%= @project.end_date %>
+
+<%= link_to 'Back to Projects', projects_path %>
+<%= link_to 'Edit this Project', edit_project_path %>
