--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,14 +15,14 @@
 	</p>
 
 <% end %>
- 
-<%= # link_to "Login", new_session_path %>
- 
+  
 <% if current_user %>
-	<%= link_to "My Profile",  %>
+	<p>Currently logged in as <%= current_user.email %></p>
+	<%= link_to "Logout", :logout, method: :post %>
+	<%= link_to "My Profile", new_user_path  %>
 	<%= link_to "Create a Project", new_project_path %>
 <% else %>
-<p>Please <%= link_to "log in", new_session_path %>.</p> 
+	<p>Please <%= link_to "log in", new_session_path %> or <%= link_to "sign up", new_user_path %>.</p> 
 <% end %> 
 
 
