--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,4 +6,7 @@
 <br><%= @project.start_date %>, <%= @project.end_date %>
 
 <%= link_to 'Back to Projects', projects_path %>
-<%= link_to 'Edit this Project', edit_project_path %>
+
+<% if current_user.id == @project.owner_id %>
+	<%= link_to 'Edit this Project', edit_project_path %>
+<% end %>
