--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,46 @@
 </head>
 <body>
 
-  <h1>Crowdfunder</h1>
-  
-  <nav class="nav">
-    <% if current_user %>
-      <p>Currently logged in as <%= current_user.email %></p>
-      <%= link_to "Logout", :logout, method: :post %>
-      <%= link_to "My Profile", new_user_path  %>
-      <%= link_to "Create a Project", new_project_path %>
-    <% else %>
-      <p>Please <%= link_to "log in", new_session_path %> or <%= link_to "sign up", new_user_path %>.</p> 
-    <% end %>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <div class="navbar-brand" href="#">Crowdfunder</div>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="#">Projects</a>
+          </li>
+          <li>
+            <a href="#">Create Project</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "My Profile", new_user_path  %></li>
+                <li><%= link_to "Create a Project", new_project_path %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Logout", :logout, method: :post %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to "Log in", new_session_path %>
+            </li>
+            <li>
+              <a id="no-hover">or</a>
+            </li>
+            <li>
+              <%= link_to "Sign up", new_user_path %>
+            </li>
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
   </nav>
 
   <% if flash[:notice] %>
@@ -28,7 +57,7 @@
     <p id="alert"><%= flash[:alert] %></p>
   <% end %>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
