--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,18 +1,37 @@
 <%= form_for @project do |f| %>
-<%= f.label :title %><br>
-<%= f.text_field :title %><br>
-<br>
-<%= f.label :description %><br>
-<%= f.text_area :description %><br>
-<br>
-<%= f.label :funding_goal %><br>
-<%= f.number_field :funding_goal %><br>
-<br>
-<%= f.label :start_date %><br>
-<%= f.date_field :start_date %><br>
-<br>
-<%= f.label :end_date %><br>
-<%= f.date_field :end_date %><br>
-<br>
-<%= f.submit %>
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %><br>
+  </div>
+    <br>
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %><br>
+  </div>
+    <br>
+  <div class="field">
+    <%= f.label :funding_goal %><br>
+    <%= f.number_field :funding_goal %><br>
+    <br>
+  </div>
+  <div class="field">
+    <%= f.label :start_date %><br>
+    <%= f.date_field :start_date %><br>
+    <br>
+  </div>
+  <div class="field">
+    <%= f.label :end_date %><br>
+    <%= f.date_field :end_date %><br>
+    <br>
+  </div>
+  <h3> Add a Reward </h3>
+  <div id="rewards">
+    <%= f.fields_for :rewards do |reward| %>
+     <%= render 'reward_fields', :f => reward %>
+    <% end %>
+    <div class="links">
+      <%= link_to_add_association 'Add a Reward', f, :rewards  %>
+    </div>
+  </div>
+  <%= f.submit %>
 <% end %>
