Fix links in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="#">Projects</a>
+            <%= link_to "Projects", projects_path  %>
           </li>
           <li>
-            <a href="#">Create Project</a>
+            <%= link_to "New Project", new_project_path  %>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
