Added backer id and pledges controller

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,9 +5,12 @@
 <%= @project.funding_goal%>
 <br><%= @project.start_date %>, <%= @project.end_date %>
 
-<h3> Rewards </h3>
+<div class="rewards">
+  <h3> Rewards </h3>
+  <%= render partial: 'reward', collection: @project.rewards %>
+</div>
 
-<%= render 'rewards' %>
+<%= render 'comments' %>
 
 <%= link_to 'Back to Projects', projects_path %>
 
