--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><%= link_to "My Profile", new_user_path  %></li>
+                <li><%= link_to "My Profile", user_path(current_user.id) %></li>
                 <li><%= link_to "Create a Project", new_project_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Logout", :logout, method: :post %></li>
