--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,10 @@ a#no-hover:hover {
 	color: #777 !important;
 }
 
-#card {
+.card {
   border: black 1px solid;
+}
+
+.flip {
+position: absolute;
 }
