--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.card {
+  margin: 1.5em;
+  width: 500px;
+  height: 200px;
+  
+  .front {
+    background-color: cornflowerblue;
+  }
+
+  .back {
+    background-color: green;
+  }
+}
