--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,9 +10,11 @@
   <%= render partial: 'reward', collection: @project.rewards %>
 </div>
 
-<h3> Add a Comment </h3>
+<% if current_user %>
+  <h3> Add a Comment </h3>
 
-<%= render 'comment_form' %>
+  <%= render 'comment_form' %>
+<% end %>
 
 <h3> Comments <h3>
 <div id="show-comments">
@@ -20,9 +22,8 @@
 </div>
 
 <%= link_to 'Back to Projects', projects_path %>
-
-<% if current_user.id == @project.owner_id %>
-	<%= link_to 'Edit this Project', edit_project_path %>
-
+<% if current_user %>
+  <% if current_user.id == @project.owner_id %>
+    <%= link_to 'Edit this Project', edit_project_path %>
+  <% end %>
 <% end %>
-
