Add funding total and fix pledge seeds in the process

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,6 +3,7 @@
 <%= @project.description %>
 <br>
 <%= @project.funding_goal%>
+<p>Funding total thus far: <%= @project.funding_total %></p>
 <br><%= @project.start_date %>, <%= @project.end_date %>
 
 <div class="rewards">
