Fix ajax refresh for comments

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,7 @@
-$("#show-comments").append("<%= j(render(:partial => 'projects/comments', local: {comment: @comment})) %>");
+<% if @comment.errors.present? %>
+  $("#comment-form-errors").html("<%= escape_javascript(render(:partial => '/projects/comment_form_errors')) %>")
+<% else %>
+  $("#comment-form-errors").html("");
+  $("#comment-list").html("<%= escape_javascript(render(:partial => '/projects/comments')) %>");
+  $("#new_comment")[0].reset();
+<% end %>
