--- a/app/views/projects/_comment_form.html.erb
+++ b/app/views/projects/_comment_form.html.erb
@@ -1,15 +1,7 @@
-<%= form_for [@project, @comment], :remote => true do |f| %>
-    <% if @comment.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-        <ul>
-        <% @comment.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
+<%= form_for([@project, @comment], :remote => true) do |f| %>
+    <div id="comment-form-errors">  
+      <%= render :partial => "/projects/comment_form_errors" %>
+    </div>
     <div class="field">
       <%= f.label :description %><br />
       <%= f.text_area :description %>
